#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)
AC_INIT([fmradioservice], 0.9)
AC_CONFIG_SRCDIR([src/fm_radio_service.c])

AM_INIT_AUTOMAKE()

# Initialize libtool
LT_PREREQ([2.4])
LT_INIT(shared static)

AC_ENABLE_SHARED
AC_DISABLE_STATIC
AC_PROG_LIBTOOL(libtool)

AC_PREFIX_DEFAULT(/usr)

# Checks for programs
AC_PROG_CC

PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.36])
PKG_CHECK_MODULES(GIO, [gio-2.0 >= 2.36])
PKG_CHECK_MODULES(GOBJECT, [gobject-2.0 >= 2.36])
PKG_CHECK_MODULES(DBUS, [dbus-1 >= 1.6])
PKG_CHECK_MODULES(DBUS_GLIB, [dbus-glib-1])

APP_CFLAGS="-Wall -fno-strict-aliasing $GLIB_CFLAGS $GIO_CFLAGS $GOBJECT_CFLAGS $DBUS_CFLAGS $APP_CFLAGS"
APP_LIBS="$GLIB_LIBS $GIO_LIBS $GOBJECT_LIBS $DBUS_LIBS $DBUS_GLIB $APP_LIBS"

AC_SUBST(APP_CFLAGS)
AC_SUBST(APP_LIBS)

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

AC_SUBST(GIO_CFLAGS)
AC_SUBST(GIO_LIBS)

AC_SUBST(GOBJECT_CFLAGS)
AC_SUBST(GOBJECT_LIBS)

AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)

AC_SUBST(DBUS_GLIB_CFLAGS)
AC_SUBST(DBUS_GLIB_LIBS)

AS_AC_EXPAND(DATADIR, $datadir)
AS_AC_EXPAND(LIBDIR, $libdir)

DBUS_SERVICES_DIR="$DATADIR/dbus-1/services"
AC_SUBST(DBUS_SERVICES_DIR)
AC_DEFINE_UNQUOTED(DBUS_SERVICES_DIR, "$DBUS_SERVICES_DIR", [Where services dir for DBUS is])

SYSTEMD_USER_SERVICE_PATH="$LIBDIR/systemd/user"
AC_SUBST(SYSTEMD_USER_SERVICE_PATH)

DBUS_SESSION_SERVICE_PATH="$DATADIR/dbus-1/services"
AC_SUBST(DBUS_SESSION_SERVICE_PATH)

TIZEN_XWALK_EXTENSION_PATH="$LIBDIR/tizen-extensions-crosswalk"
AC_SUBST(TIZEN_XWALK_EXTENSION_PATH)

AC_OUTPUT([Makefile src/Makefile data/Makefile])
