plugin_LTLIBRARIES = libgstsdrjfm.la

libgstsdrjfm_la_SOURCES = gstsdrjfm.c \
                         gstsdrjfmsrc.c

libgstsdrjfm_la_CFLAGS = $(GST_CFLAGS) $(RS_CFLAGS)
libgstsdrjfm_la_LIBADD = $(GST_LIBS) $(RS_LIBS)
libgstsdrjfm_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstsdrjfm_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)

noinst_HEADERS = gstsdrjfmsrc.h

